refactor(#83): remove deprecation; use platform agnostic new line break